SERVER-62877 Initialize clusteredCollectionCollator